--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">UniRecruit</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="app_name">若楠tips</string>
+    <string name="title_home">官网招聘</string>
+    <string name="title_dashboard">其他招聘</string>
+    <string name="title_notifications">收藏</string>
 </resources>
