--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">若楠tips</string>
-    <string name="title_home">官网招聘</string>
-    <string name="title_dashboard">其他招聘</string>
-    <string name="title_notifications">收藏</string>
+    <string name="title_home">武汉高校</string>
+    <string name="title_dashboard">杭州高校</string>
+    <string name="title_notifications">其他</string>
 </resources>
